# stateful-agents

./: .gitignore  README.md
docs/: architecture.mmd  fencing_timeline.mmd  two_worker_race.mmd
engine/: package-lock.json  package.json
engine/src/: agent.runner.ts  index.ts  llm.ts  logger.ts
engine/src/stores/: state.store.ts
engine/src/types/: agent.types.ts  research.types.ts
engine/src/utils/: redis.ts
engine/src/workflows/: research.ts
python/: pyproject.toml
python/benchmarks/: _stores.py  charts.py  run_bench.py
python/benchmarks/results/: cold_resume.csv  latency.csv  meta.json  throughput.csv
python/demos/: crash_and_resume.py  run_research.py
python/stateful_agents/: __init__.py  engine.py  llm.py  lock.py  state.py
python/stateful_agents/stores/: __init__.py  base.py  memory_store.py  postgres_store.py  redis_store.py  sqlite_store.py
python/stateful_agents/workflows/: research.py
